src/test/resources/semantic/accept/printStatement.ul
void main() {
    return foo();
}

void foo() {
    print 8;
    print 9.4;
    print 'h';
    print "sth";
    print true;
    print false;

    print bar();
    print 9.8 * 6.14;
}

boolean bar() {
}
