src/test/resources/semantic/reject/multiplyInvalidTypesVoid.ul
void main() {
}

void foo() {
    int result;
    result = 6 * main();
}
